# fastApi

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_main.py
models/: UserResponse.py  api_schemas.py  queries.py  user_db.py  user_inmemory.py
src/: database_connection.py
src/models/: api_schemas.py  queries.py  user_db.py  user_inmemory.py
test/: test_userdb.py
