[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.13"


[tool.black]
line-length = 88
target-version = ["py311"]


[tool.isort]
profile = "black"
line_length = 88


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   
    "W",   
    "F",   
    "I",   
    "B",
    "UP",  
    "SIM", 
    "C4",  
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true


[tool.mypy]
python_version = "3.11"

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

check_untyped_defs = true
disallow_untyped_defs = true

strict_optional = true

ignore_missing_imports = true

show_error_codes = true
pretty = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]